package edu.austral.dissis.chess.piece;

public enum PieceType {
    PAWN,
    BISHOP,
    KING,
    KNIGHT,
    QUEEN,
    ROOK,
    ARCHBISHOP,
    CHANCELLOR,


}
